# nextgen

./: .gitignore  README.md  chat.py  create_proteins_db.py  pyproject.toml  requirements.txt  simple_uniprot_downloader.py
construct_database/: add_measurement_table.py  add_proteins_db.py  add_sample_table.py  init_database.py
notebooks/: chat.py  data_preprocessing.ipynb  test.ipynb  test2.ipynb  vanna.ipynb
src/nextgen/agents/: __init__.py  analysis_agent.py  cross_reference_agent.py  data_scientist_agent.py  research_scientist_agent.py  sql_agent.py  statistician_agent.py
src/nextgen/analysis/: t_test.py
src/nextgen/chat/: gradio_chat.py
src/nextgen/langgraph/: client.py  research_graph.py
src/nextgen/openai/: client.py
src/nextgen/pandas/: client.py
src/nextgen/vanna/: client.py  llama.py
train/: train_data_scientist.py
uniprot/: Programmatic access - Retrieving entries via queries _ UniProt help _ UniProt.html
