[project]
name = "nextgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "dotenv>=0.9.9",
    "kaleido==0.2.1",
    "torch>=2.7.0",
    "vanna[chromadb,mysql,openai]>=0.7.9",
    "unipressed>=1.4.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "streamlit>=1.45.1",
    "gradio>=5.33.1",
    "httpx==0.27.*",
    "pandasai>=2.0.24",
    "qdrant-client>=1.15.0",
    "scikit-learn>=1.7.1",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



